Fixed compiling errors with orderControllerTest and PaymentControllerTest