@@ -1,26 +1,18 @@
 package com.boozebuddies.controller;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-import com.boozebuddies.dto.ApiResponse;
-import com.boozebuddies.dto.CreateOrderRequest;
-import com.boozebuddies.dto.OrderDTO;
-import com.boozebuddies.dto.OrderItemRequest;
-import com.boozebuddies.entity.Merchant;
-import com.boozebuddies.entity.Order;
-import com.boozebuddies.entity.OrderItem;
-import com.boozebuddies.entity.Product;
-import com.boozebuddies.entity.User;
+import com.boozebuddies.dto.*;
+import com.boozebuddies.entity.*;
 import com.boozebuddies.model.OrderStatus;
+import com.boozebuddies.model.Role;
 import com.boozebuddies.service.OrderService;
+import com.boozebuddies.service.PermissionService;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -29,197 +21,204 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 
 @ExtendWith(MockitoExtension.class)
 public class OrderControllerTest {
 
-  @Mock private OrderService orderService;
+    @Mock private OrderService orderService;
+    @Mock private PermissionService permissionService;
+    @Mock private Authentication authentication;
 
-  @InjectMocks private OrderController orderController;
+    @InjectMocks private OrderController orderController;
 
-  private Order testOrder;
-  private User testUser;
-  private Merchant testMerchant;
-  private OrderItem testOrderItem;
-  private Product testProduct;
-  private CreateOrderRequest testCreateRequest;
+    private User testUser;
+    private Merchant testMerchant;
+    private Order testOrder;
+    private OrderItem testOrderItem;
+    private Product testProduct;
+    private CreateOrderRequest testCreateRequest;
 
-  @BeforeEach
-  void setUp() {
-    testUser = User.builder().id(1L).name("John Doe").build();
+    @BeforeEach
+    void setUp() {
+        // Test user
+        testUser = User.builder().id(1L).name("John Doe").roles(Set.of(Role.USER)).build();
 
-    testMerchant = Merchant.builder().id(1L).name("Test Liquor Store").build();
+        // Merchant
+        testMerchant = Merchant.builder().id(1L).name("Test Liquor Store").build();
 
-    testProduct =
-        Product.builder()
-            .id(1L)
-            .name("Test Beer")
-            .price(new BigDecimal("19.99"))
-            .merchant(testMerchant)
-            .build();
+        // Product
+        testProduct = Product.builder()
+                .id(1L)
+                .name("Test Beer")
+                .price(new BigDecimal("19.99"))
+                .merchant(testMerchant)
+                .build();
 
-    testOrderItem =
-        OrderItem.builder()
-            .id(1L)
-            .product(testProduct)
-            .quantity(2)
-            .unitPrice(new BigDecimal("19.99"))
-            .build();
+        // Order Item
+        testOrderItem = OrderItem.builder()
+                .id(1L)
+                .product(testProduct)
+                .quantity(2)
+                .unitPrice(new BigDecimal("19.99"))
+                .build();
 
-    testOrder =
-        Order.builder()
-            .id(1L)
-            .user(testUser)
-            .merchant(testMerchant)
-            .items(List.of(testOrderItem))
-            .totalAmount(new BigDecimal("39.98"))
-            .status(OrderStatus.PENDING)
-            .createdAt(LocalDateTime.now())
-            .build();
+        // Order
+        testOrder = Order.builder()
+                .id(1L)
+                .user(testUser)
+                .merchant(testMerchant)
+                .items(List.of(testOrderItem))
+                .totalAmount(new BigDecimal("39.98"))
+                .status(OrderStatus.PENDING)
+                .createdAt(LocalDateTime.now())
+                .build();
 
-    testCreateRequest =
-        CreateOrderRequest.builder()
-            .userId(1L)
-            .merchantId(1L)
-            .items(
-                Arrays.asList(
-                    OrderItemRequest.builder()
-                        .productId(1L)
-                        .quantity(2)
-                        .unitPrice(new BigDecimal("10.00"))
-                        .build()))
-            .build();
-  }
+        // Create Order Request
+        testCreateRequest = CreateOrderRequest.builder()
+                .userId(1L)
+                .merchantId(1L)
+                .items(List.of(
+                        OrderItemRequest.builder()
+                                .productId(1L)
+                                .quantity(2)
+                                .unitPrice(new BigDecimal("19.99"))
+                                .build()))
+                .build();
+    }
 
-  @Test
-  void createOrder_Success() {
-    when(orderService.createOrder(any(Order.class))).thenReturn(testOrder);
+    // ==================== CREATE ORDER ====================
+    @Test
+    void createOrder_Success() {
+        when(permissionService.getAuthenticatedUser(authentication)).thenReturn(testUser);
+        when(orderService.createOrder(any(Order.class))).thenReturn(testOrder);
 
-    ResponseEntity<ApiResponse<OrderDTO>> response = orderController.createOrder(testCreateRequest);
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.createOrder(testCreateRequest, authentication);
 
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertTrue(body.isSuccess());
-    assertEquals("Order created successfully", body.getMessage());
-  }
+        ApiResponse<OrderDTO> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(body.isSuccess());
+        assertEquals("Order created successfully", body.getMessage());
+    }
 
-  @Test
-  void getOrderById_Found() {
-    when(orderService.getOrderById(1L)).thenReturn(Optional.of(testOrder));
+    @Test
+    void createOrder_AccessDenied() {
+        // User tries to create order for someone else
+        CreateOrderRequest invalidRequest = CreateOrderRequest.builder()
+                .userId(99L)
+                .merchantId(1L)
+                .items(testCreateRequest.getItems())
+                .build();
 
-    ResponseEntity<ApiResponse<OrderDTO>> response = orderController.getOrderById(1L);
+        when(permissionService.getAuthenticatedUser(authentication)).thenReturn(testUser);
 
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertTrue(body.isSuccess());
-    assertEquals("Order retrieved successfully", body.getMessage());
-  }
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.createOrder(invalidRequest, authentication);
 
-  @Test
-  void getOrderById_NotFound() {
-    when(orderService.getOrderById(99L)).thenReturn(Optional.empty());
+        ApiResponse<OrderDTO> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
+        assertTrue(body.getMessage().contains("You can only create orders for yourself"));
+    }
 
-    ResponseEntity<ApiResponse<OrderDTO>> response = orderController.getOrderById(99L);
+    // ==================== GET ORDER ====================
+    @Test
+    void getOrderById_Success() {
+        when(orderService.getOrderById(1L)).thenReturn(Optional.of(testOrder));
 
-    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-  }
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.getOrderById(1L, authentication);
 
-  @Test
-  void getOrdersByUser_Success() {
-    when(orderService.getOrdersByUser(1L)).thenReturn(List.of(testOrder));
+        ApiResponse<OrderDTO> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(body.isSuccess());
+        assertEquals("Order retrieved successfully", body.getMessage());
+    }
 
-    ResponseEntity<ApiResponse<List<OrderDTO>>> response = orderController.getOrdersByUser(1L);
+    @Test
+    void getOrderById_NotFound() {
+        when(orderService.getOrderById(99L)).thenReturn(Optional.empty());
 
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    ApiResponse<List<OrderDTO>> body = response.getBody();
-    assertNotNull(body);
-    assertTrue(body.isSuccess());
-    assertEquals("User orders retrieved successfully", body.getMessage());
-  }
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.getOrderById(99L, authentication);
 
-  @Test
-  void updateOrderStatus_Success() {
-    when(orderService.updateOrderStatus(eq(1L), eq("CONFIRMED"))).thenReturn(testOrder);
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
 
-    ResponseEntity<ApiResponse<OrderDTO>> response =
-        orderController.updateOrderStatus(1L, "CONFIRMED");
+    @Test
+    void getMyOrders_Success() {
+        when(permissionService.getAuthenticatedUser(authentication)).thenReturn(testUser);
+        when(orderService.getOrdersByUser(testUser.getId())).thenReturn(List.of(testOrder));
 
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertTrue(body.isSuccess());
-    assertEquals("Order status updated successfully", body.getMessage());
-  }
+        ResponseEntity<ApiResponse<List<OrderDTO>>> response =
+                orderController.getMyOrders(authentication);
 
-  @Test
-  void updateOrderStatus_NotFound() {
-    when(orderService.updateOrderStatus(eq(99L), anyString()))
-        .thenThrow(new IllegalArgumentException("Order not found"));
+        ApiResponse<List<OrderDTO>> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(body.isSuccess());
+        assertEquals(1, body.getData().size());
+    }
 
-    ResponseEntity<ApiResponse<OrderDTO>> response =
-        orderController.updateOrderStatus(99L, "CONFIRMED");
+    // ==================== CANCEL ORDER ====================
+    @Test
+    void cancelOrder_Success() {
+        when(permissionService.getAuthenticatedUser(authentication)).thenReturn(testUser);
+        when(orderService.getOrderById(1L)).thenReturn(Optional.of(testOrder));
+        when(orderService.cancelOrder(1L)).thenReturn(testOrder);
 
-    assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertFalse(body.isSuccess());
-    assertEquals("Failed to update order status: Order not found", body.getMessage());
-  }
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.cancelOrder(1L, authentication);
 
-  @Test
-  void cancelOrder_Success() {
-    Order cancelledOrder = Order.builder().id(1L).status(OrderStatus.CANCELLED).build();
+        ApiResponse<OrderDTO> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(body.isSuccess());
+        assertEquals("Order cancelled successfully", body.getMessage());
+    }
 
-    when(orderService.cancelOrder(1L)).thenReturn(cancelledOrder);
+    @Test
+    void cancelOrder_NotOwner() {
+        when(permissionService.getAuthenticatedUser(authentication)).thenReturn(testUser);
+        User otherUser = User.builder().id(2L).build();
+        Order orderForOther = Order.builder().id(1L).user(otherUser).build();
+        when(orderService.getOrderById(1L)).thenReturn(Optional.of(orderForOther));
 
-    ResponseEntity<ApiResponse<OrderDTO>> response = orderController.cancelOrder(1L);
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.cancelOrder(1L, authentication);
 
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertTrue(body.isSuccess());
-    assertEquals("Order cancelled successfully", body.getMessage());
-  }
+        ApiResponse<OrderDTO> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
+        assertTrue(body.getMessage().contains("You can only cancel your own orders"));
+    }
 
-  @Test
-  void cancelOrder_NotFound() {
-    when(orderService.cancelOrder(99L)).thenThrow(new IllegalArgumentException("Order not found"));
+    // ==================== UPDATE ORDER STATUS ====================
+    @Test
+    void updateOrderStatus_Success() {
+        when(orderService.getOrderById(1L)).thenReturn(Optional.of(testOrder));
+        when(orderService.updateOrderStatus(1L, "CONFIRMED")).thenReturn(testOrder);
 
-    ResponseEntity<ApiResponse<OrderDTO>> response = orderController.cancelOrder(99L);
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.updateOrderStatus(1L, "CONFIRMED", authentication);
 
-    assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertFalse(body.isSuccess());
-    assertEquals("Failed to cancel order: Order not found", body.getMessage());
-  }
+        ApiResponse<OrderDTO> body = response.getBody();
+        assertNotNull(body);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(body.isSuccess());
+        assertEquals("Order status updated successfully", body.getMessage());
+    }
 
-  @Test
-  void createOrder_ValidationError() {
-    CreateOrderRequest invalidRequest = CreateOrderRequest.builder().build();
-    when(orderService.createOrder(any(Order.class)))
-        .thenThrow(new IllegalArgumentException("Invalid order data"));
+    @Test
+    void updateOrderStatus_NotFound() {
+        when(orderService.getOrderById(99L)).thenReturn(Optional.empty());
 
-    ResponseEntity<ApiResponse<OrderDTO>> response = orderController.createOrder(invalidRequest);
+        ResponseEntity<ApiResponse<OrderDTO>> response =
+                orderController.updateOrderStatus(99L, "CONFIRMED", authentication);
 
-    assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertFalse(body.isSuccess());
-    assertEquals("Failed to create order: Invalid order data", body.getMessage());
-  }
-
-  @Test
-  void updateOrderStatus_InvalidStatus() {
-    ResponseEntity<ApiResponse<OrderDTO>> response =
-        orderController.updateOrderStatus(1L, "INVALID_STATUS");
-
-    assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    ApiResponse<OrderDTO> body = response.getBody();
-    assertNotNull(body);
-    assertFalse(body.isSuccess());
-    assertTrue(body.getMessage().contains("Failed to update order status"));
-  }
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
 }
